# recommendation_service

./: .dockerignore  .env  .gitignore  Dockerfile  Makefile  README.md  docker-compose.yml  gunicorn.conf.py  manage.py  pyproject.toml
data/scripts/: wait-services.sh
data/scripts/clickhouse/: init.sh
src/: app.py  clickhouse.py  config.py  exceptions.py  logging.py
src/api/: __init__.py  responses.py
src/api/routers/: __init__.py  recommendations.py
src/cli/: __init__.py  db.py
src/schemas/: recommendation.py
src/services/: __init__.py  base.py  recommendation.py
