[project]
name = "recommendation_service"
version = "0.1.0"
description = ""
authors = [
    { name = "Artsiom Zhvanko", email = "azhvanko@outlook.com" }
]
requires-python = ">=3.13,<3.15"
dependencies = [
    "clickhouse-connect (==0.10.0)",
    "fastapi (==0.128.0)",
    "gunicorn (==25.0.1)",
    "httptools (==0.7.1)",
    "orjson (==3.11.7)",
    "pydantic-settings (==2.12.0)",
    "structlog (==25.5.0)",
    "uvicorn-worker (==0.4.0)",
    "uvloop (==0.22.1)",
]

[tool.poetry]
package-mode = false

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
